{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 46,
  "lineage": "18aaecaa-bef0-acf9-a2f1-e09756494f85",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2202cf4c36161a1",
            "arn": "arn:aws:ec2:eu-west-1:296274010522:instance/i-0c8d1053df4427b6f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c8d1053df4427b6f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03d658d58c493ff28",
            "private_dns": "ip-10-0-1-158.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.158",
            "public_ip": "52.213.72.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03e308ee4471e284f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bab887a6607bde9f",
            "tags": {
              "Name": "nqs-instance"
            },
            "tags_all": {
              "Name": "nqs-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a4bc428c9e4557f"
            ]
          },
          "dependencies": [
            "aws_security_group.custom_sg",
            "aws_subnet.public_sub",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:internet-gateway/igw-0c3ddcb124f7644f3",
            "id": "igw-0c3ddcb124f7644f3",
            "owner_id": "296274010522",
            "tags": {
              "Name": "nqs-internet-gateway"
            },
            "tags_all": {
              "Name": "nqs-internet-gateway"
            },
            "vpc_id": "vpc-097f57010c0c161af"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "custom_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:route-table/rtb-0d752555180408ee0",
            "id": "rtb-0d752555180408ee0",
            "owner_id": "296274010522",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c3ddcb124f7644f3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nqs-public-rt"
            },
            "tags_all": {
              "Name": "nqs-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-097f57010c0c161af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "custom_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bd29c4b92285092",
            "route_table_id": "rtb-0d752555180408ee0",
            "subnet_id": "subnet-0bab887a6607bde9f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.custom_route_table",
            "aws_subnet.public_sub",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "custom_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:security-group/sg-03a4bc428c9e4557f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a4bc428c9e4557f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240819093221184700000001",
            "name_prefix": "terraform-",
            "owner_id": "296274010522",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nqs-security-group"
            },
            "tags_all": {
              "Name": "nqs-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-097f57010c0c161af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:subnet/subnet-0bab887a6607bde9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bab887a6607bde9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296274010522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nqs-public-subnet"
            },
            "tags_all": {
              "Name": "nqs-public-subnet"
            },
            "vpc_id": "vpc-097f57010c0c161af"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:296274010522:vpc/vpc-097f57010c0c161af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0721aadd7553139d5",
            "default_route_table_id": "rtb-06f35991870fc46dc",
            "default_security_group_id": "sg-0fbcbd378d4d62849",
            "dhcp_options_id": "dopt-0f1ce26971dcd0ae2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-097f57010c0c161af",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06f35991870fc46dc",
            "owner_id": "296274010522",
            "tags": {
              "Name": "nqs-custom-vpc"
            },
            "tags_all": {
              "Name": "nqs-custom-vpc"
            }
          }
        }
      ]
    }
  ]
}